--- a/data/03.html
+++ b/data/03.html
@@ -134,14 +134,16 @@
 
 ●実数の場合, \(z=0 \Rightarrow e^{-z}=1,　e^z=1\)<br>
 <img src="images/sin1.png"><br>
-<br>
 　\(x\) が変化しても赤矢印は -1 ～ +1 の範囲でしか変化しない。<br>
-<br>
+<center><img src="images/sin_1.gif"></center><br>
+
 ●複素数の場合 (\(z \neq 0\))<br>
 <img src="images/sin2.png"><br>
 <br>
 　\(z\) の値を変更すると、赤矢印の長さが 1 を超える場合がある。<br>
-<br>
+<center><img src="images/sin_2.gif"></center><br>
+<center><img src="images/sin_3.gif"></center><br>
+
 　\(\cos\) も同様と思うので省略･･･
 </p>
     </body>
