--- a/data/03.html
+++ b/data/03.html
@@ -112,7 +112,7 @@
 \]
 の \(y\) に \(x+iz\) を代入して 大きさを求めると下図のようになる(たぶん)。<br> 
 </p>
-<center><img src="images/y=sin(x+iz).png"></center>
+<center><img src="images/magnitude_sin.gif"></center>
 <center>\(y = |\sin(x+iz)|\)</center>
 <p>
 \(x\) 軸上(\(z=0\)) では \(\leq 1\) となっている。
@@ -141,6 +141,9 @@
 <img src="images/sin2.png"><br>
 <br>
 　\(z\) の値を変更すると、赤矢印の長さが 1 を超える場合がある。<br>
+　2辺の長さが \(e^z\) と \(e^{-z}\)。間の角度が \(2x\)。<br>
+　余弦定理より、対辺の長さは \(\sqrt{(e^z)^2+(e^{-z})^2-2e^ze^{-z}\cos(2x)}\)。 <br>
+　\(|\sin(x+iz)|\) はその半分。<br>
 <center><img src="images/sin_2.gif"></center><br>
 <center><img src="images/sin_3.gif"></center><br>
 
