--- a/data/03.html
+++ b/data/03.html
@@ -147,7 +147,10 @@
 <center><img src="images/sin_2.gif"></center><br>
 <center><img src="images/sin_3.gif"></center><br>
 
-　\(\cos\) も同様と思うので省略･･･
+　\(\cos\) も同様･･･<br>
+<center><img src="images/cos_1.gif"></center><br>
+<center><img src="images/cos_2.gif"></center><br>
+<center><img src="images/cos_3.gif"></center><br>
 </p>
     </body>
 </html>
