--- a/data/08.html
+++ b/data/08.html
@@ -4,7 +4,7 @@
         <script type="text/javascript" id="MathJax-script" async
         src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
         <meta charset="utf-8" />
-        <title>類推が破綻するとき</title>
+        <title>08</title>
         <style type="text/css">
             p
             {
@@ -102,22 +102,21 @@
     </style>
     </head>
     <body>
-<h1><center>類推が破綻するとき</center></h1>
-<h2>なにものか？</h2>
+<h2><center>透明に見えるものは透明 ?</center></h3>
 <p>
-類推が破綻する例を集めてみる。
+(カテゴリーが異なる気もするが, 最近知ったのでメモしておく･･･)
+</p>
+</p><p style="text-align: right;">
 
-<div class="styleBullet">
-<ul>
-<li><a href="01.html">16元数・32元数は存在する ?</a></li>
-<li><a href="02.html">y<sup>2</sup> ≧ 0 ?</a></li>
-<li><a href="03.html">|sin| ≦ 1 ?, |cos| ≦ 1 ?</a></li>
-<li><a href="04.html">大きさ0のベクトル＝ゼロベクトル ?</a></li>
-<li><a href="05.html">平均値の定理はいつでも成り立つ ?</a></li>
-<li><a href="06.html">ルベーグ測度はいつでも存在する ?</a></li>
-<li><a href="07.html">デデキントの完全性公理はいつでも成り立つ?</a></li>
-<li><a href="08.html">透明に見えるものは透明?</a></li>
-</ul></div>
+「水は電磁スペクトルの非常に狭い帯域内でのみ透明です。<br>
+　そのため、生物はその帯域に対する感度を進化させ、<br>
+　それが現在「可視光」と呼ばれているのです。」<br>
+</p>
 <p>
+　水が透明なのではなくて, 水が透明に感じられるように生物の視覚系が進化した...
+
+</p>
+<center><img src="images/absorption.png"></center>
+<center>水の相対吸収率</center>
     </body>
 </html>
