--- a/data/05.html
+++ b/data/05.html
@@ -106,5 +106,13 @@
 <p>
 複素関数では一般に平均値の定理は成り立たない。
 </p>
+<p>
+(例) \(f(z)=u(x,y)+iv(x,y),　(z=x+iy)\)<br>
+<br>
+　　 \(u(x,y), v(x,y)\) それぞれで平均値の定理を適用しても, 2点間の平均的な傾きと同じ傾きになる点の位置が一致するとは限らない(一般には一致しない)。
+</p>
+<center><img src="images/mvt.png"></center>
+
+
     </body>
 </html>
