--- a/data/When_analogy_breaks_down.html
+++ b/data/When_analogy_breaks_down.html
@@ -116,6 +116,7 @@
 <li><a href="05.html">平均値の定理はいつでも成り立つ ?</a></li>
 <li><a href="06.html">ルベーグ測度はいつでも存在する ?</a></li>
 <li><a href="07.html">デデキントの完全性公理はいつでも成り立つ?</a></li>
+<li><a href="09.html">複素数 C と R<sup>2</sup> は1:1に対応する ⇒ 複素関数(C→C)と実関数 (R<sup>2</sup>→R<sup>2</sup>) も同じようなもの ?</a></li>
 <li><a href="08.html">透明に見えるものは透明?</a></li>
 </ul></div>
 <p>
