--- a/data/09.html
+++ b/data/09.html
@@ -174,8 +174,8 @@
 &({\color{blue}関数値の実部}+i{\color{green}関数値の虚部})\times ({\color{red}区間の実部}+i{\color{orange}区間の虚部})\\
 
 
-&　=({\color{blue}u}+i{\color{green}v})\times ({\color{red}x}+i{\color{orange}y})=({\color{red}x}{\color{blue}u}-{\color{orange}y}{\color{green}v})
-+i({\color{red}x}{\color{green}v}+{\color{blue}u}{\color{orange}y})
+&　=({\color{blue}u}+i{\color{green}v})\times ({\color{red}x}+i{\color{orange}y})=\underbrace{({\color{red}x}{\color{blue}u}-{\color{orange}y}{\color{green}v})}_{面積の実部}
++i\underbrace{({\color{red}x}{\color{green}v}+{\color{blue}u}{\color{orange}y})}_{面積の虚部}
 \end{align}
 \]
 
