--- a/data/09.html
+++ b/data/09.html
@@ -153,7 +153,7 @@
 
 \[
 \frac{{\color{blue}関数値の実部}+i {\color{green}関数値の虚部}}{{\color{red}変数の実部}+i {\color{orange}変数の虚部}}=
-\frac{{\color{blue}u}+i{\color{green}v}}{{\color{red}x}+i{\color{orange}y}}  =\underbrace{\frac{{\color{red}x}{\color{blue}u}+{\color{orange}y}{\color{green}v}}{{\color{\red}x^2}+{\color{orange}y^2}}}_{部分係数の実部}+i\underbrace{\frac{{\color{red}x}{\color{green}v}-{\color{blue}u}{\color{orange}y}}{{\color{red}x^2}+{\color{orange}y^2}}}_{微分係数の虚部}
+\frac{{\color{blue}u}+i{\color{green}v}}{{\color{red}x}+i{\color{orange}y}}  =\underbrace{\frac{{\color{red}x}{\color{blue}u}+{\color{orange}y}{\color{green}v}}{{\color{\red}x^2}+{\color{orange}y^2}}}_{微分係数の実部}+i\underbrace{\frac{{\color{red}x}{\color{green}v}-{\color{blue}u}{\color{orange}y}}{{\color{red}x^2}+{\color{orange}y^2}}}_{微分係数の虚部}
 \]
 </p>
 
