--- a/data/08.html
+++ b/data/08.html
@@ -115,6 +115,7 @@
 <p>
 ・水が透明なのではなくて, 水が透明に感じられるように生物の視覚系が進化した...<br>
 ・X線が見えれば, 不透明なものが透明になる...<br>
+　(ニュートリノが見えれば, 大抵のものは透明になる?)<br>
 ・観察対象が透明か否かは, \(f\)(観察対象の客観的特性, 観察者の視覚特性)
 
 </p>
