--- a/data/When_analogy_breaks_down.html
+++ b/data/When_analogy_breaks_down.html
@@ -121,6 +121,7 @@
 <li><a href="11.html">CNNは畳み込みを使っているのでシフト不変?</a></li>
 <li><a href="12.html">有限個の開球の積集合は開集合。無限個でも同じ?</a></li>
 <li><a href="13.html">距離がゼロの二つの閉集合は必ずしも交わらない。</a></li>
+<li><a href="14.html">開集合は境界の点を含まない?</a></li>
 <li><a href="08.html">透明に見えるものは透明?</a></li>
 </ul></div>
 <p>
