--- a/data/14.html
+++ b/data/14.html
@@ -104,14 +104,14 @@
     <body>
 <h2><center>開集合は境界の点を含まない ?</center></h3>
 <p>
-<strong>開球</strong><br>
+<strong>開球の定義</strong><br>
 　距離空間 (\(X,d)\) において, 点 \(x \in X\), 半径 \(r\gt 0\) に対して<br>
 　\(B(x,r)=\{y \in X \mid d(x,y)\lt r\}\)<br>
-　を開球という。<br>
+　を開球 (Open Ball) という。<br>
 </p>
 
 <p>
-<strong>開集合</strong><br>
+<strong>開球を使った開集合の定義</strong><br>
 　任意の点 \(x\in U\) に対して, ある半径 \(r\gt 0\) が存在し<br>
 　\(B(x,r)\subset U\) となるような集合 \(U\subset X\) を開集合という。<br>
 <br>
@@ -128,7 +128,7 @@
 　　全体集合 \(X\) に境界があったとして, 境界上の点で球を考えると<br>
 　　球は \(X\) からはみ出すが, 開球には \(X\) の点しか入らない。<br>
 　　∴ \(B(x,r)\subset X \Rightarrow X\) は開集合
-
 </p>
+<center><img src="images/open_ball2.svg"></center>
     </body>
 </html>
