--- a/data/15.html
+++ b/data/15.html
@@ -4,7 +4,7 @@
         <script type="text/javascript" id="MathJax-script" async
         src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
         <meta charset="utf-8" />
-        <title>類推が破綻するとき</title>
+        <title>15</title>
         <style type="text/css">
             p
             {
@@ -102,29 +102,37 @@
     </style>
     </head>
     <body>
-<h1><center>類推が破綻するとき</center></h1>
-<h2>なにものか？</h2>
+<h2><center>AI推論は非可逆 ?</center></h3>
 <p>
-類推が破綻する例を集めてみる。
+AI モデルは ReLU, pooling, バッチ正規化 など非可逆そうな要素をたくさんつかっており, AI推論を反転するなんて無理そうに思えるが, そうでもないらしい･･･
+</p>
+<h3>AI推論の反転</h3>
+<p>
+AI モデルの推論結果から, 入力データや学習データを推定すること。
+</p>
+<center><img src="images/Inversion.svg"></center>
+<p>
 
-<div class="styleBullet">
-<ul>
-<li><a href="01.html">16元数・32元数は存在する ?</a></li>
-<li><a href="02.html">y<sup>2</sup> ≧ 0 ?</a></li>
-<li><a href="03.html">|sin| ≦ 1 ?, |cos| ≦ 1 ?</a></li>
-<li><a href="04.html">大きさ0のベクトル＝ゼロベクトル ?</a></li>
-<li><a href="05.html">平均値の定理はいつでも成り立つ ?</a></li>
-<li><a href="06.html">ルベーグ測度はいつでも存在する ?</a></li>
-<li><a href="07.html">デデキントの完全性公理はいつでも成り立つ?</a></li>
-<li><a href="09.html">複素数 C と R<sup>2</sup> は1:1に対応する ⇒ 複素関数(C→C)と実関数 (R<sup>2</sup>→R<sup>2</sup>) も同じようなもの ?</a></li>
-<li><a href="10.html">1点で偏微分可能, 偏導関数が連続なら全微分可能?</a></li>
-<li><a href="11.html">CNNは畳み込みを使っているのでシフト不変?</a></li>
-<li><a href="12.html">有限個の開球の積集合は開集合。無限個でも同じ?</a></li>
-<li><a href="13.html">距離がゼロの二つの閉集合は必ずしも交わらない。</a></li>
-<li><a href="14.html">開集合は境界の点を含まない?</a></li>
-<li><a href="15.html">AI推論は非可逆?</a></li>
-<li><a href="08.html">透明に見えるものは透明?</a></li>
-</ul></div>
+●『Language Models are Injective and Hence Invertible』(2025)<br>
+　(言語モデルは単射的であり 、したがって可逆である)<br>
+　「一見複雑に見えるにもかかわらず、標準的なデコーダーのみのTransformer言語モデル（プロンプトから隠れ状態へのマップとして捉えられる）は、実際にはほぼ確実に単射である。つまり、実質的にあらゆるパラメータ設定において、また訓練過程において、異なるプロンプトは異なる最終トークン表現を生成する」<br>
+<br>
+●『The non-linear representation dilemma: Is causal abstraction enough for mechanistic interpretability?』(2025)<br>
+　(非線形表現のジレンマ：メカニズム的解釈可能性にとって、因果的抽象化は十分か?)<br>
+　トランスフォーマーがランダムな初期化時にほぼ確実に単射であることを証明した。<br>
+<br>
+●『Language model inversion』(2023)<br>
+　(言語モデル反転)<br>
+ 　言語モデルの次トークン確率分布のみを分析することで、言語モデルに与えられた入力プロンプトを再構築することが可能であることを実証した。
+言語モデルAPIを通じて機密性の高いユーザーデータが漏洩する可能性のあるプライバシーの脆弱性を示した。<br>
+<br>
+●『Extracting training data from large language models』(2020)<br>
+　(大規模言語モデルからの学習データ抽出)<br>
+　大規模言語モデルからの学習データ抽出における具体的なリスクを実証し、プライバシーの脆弱性に対する重要な証拠を提供した。<br>
+<br>
+●『Inverting visual representations with convolutional networks』(2015)<br>
+　(畳み込みネットワークによる視覚表現の反転)<br>
+　画像分類器からの確率予測が重要な詳細を保持し得ることを示した。<br>
 <p>
     </body>
 </html>
