--- a/data/When_analogy_breaks_down.html
+++ b/data/When_analogy_breaks_down.html
@@ -109,6 +109,7 @@
 
 <div class="styleBullet">
 <ul>
+<li><a href="16.html">分割を細かくしていけば近似精度が上がる?</a></li>
 <li><a href="01.html">16元数・32元数は存在する ?</a></li>
 <li><a href="02.html">y<sup>2</sup> ≧ 0 ?</a></li>
 <li><a href="03.html">|sin| ≦ 1 ?, |cos| ≦ 1 ?</a></li>
